--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -18,3 +18,8 @@
 # org.gradle.parallel=true
 
 android.useDeprecatedNdk=true
+
+MYAPP_RELEASE_STORE_FILE=jd-release-key.keystore
+MYAPP_RELEASE_KEY_ALIAS=jd-key-alias
+MYAPP_RELEASE_STORE_PASSWORD=123456
+MYAPP_RELEASE_KEY_PASSWORD=123456
